# ugmovie_helper

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  injector.sh  linux_injector
.github/workflows/: build.yml
src/: functions.inc  hooks.cc  hooks.h  main.cc
src/hooks/: HttpResponseData.cc  check_api_token.cc  douban.cc  download_file.cc  handleMoviesEpsCreate.cc  refresh_movies_func.cc  sqlite3_wraper_label.cc  sqlite3_wraper_tv_film.cc  tmdb_api.cc
src/network/: http_client.cc  http_client.h
src/scraper/: cache.cc  cache.h  label.cc  label.h  label_mapping.inc  media.h  region.cc  region.h
src/scraper/douban/: api.cc  api.h  parser.cc  parser.h
src/scraper/tmdb/: parser.cc  parser.h
src/tools/: enum_class_helper.h  symbol_lookup.cc  symbol_lookup.h  synchronized.h  utils.cc  utils.h
src/ugreen/: sqlite3_wraper_label.cc  sqlite3_wraper_label.h  types.h
test/: dltest.c
